# wit-docs-inject

./: Cargo.toml  LICENSE  README.md  WIT-DOCS-VIEW.md
fetch-rs/wit/: world.wit
src/: main.rs
